@@ -1,47 +1,23 @@
 #!/bin/bash
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/netboot/Attic/netboot-packages.sh,v 1.1 2004/10/06 01:34:29 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/netboot/Attic/netboot-packages.sh,v 1.2 2004/10/11 14:19:30 zhen Exp $
 
 /usr/sbin/env-update
 source /etc/profile
 
 [ -f /tmp/envscript ] && source /tmp/envscript
 
-if [ -n "${clst_CCACHE}" ]
-then
-	export clst_myfeatures="${clst_myfeatures} ccache"
-	emerge --oneshot --nodeps -b -k ccache || exit 1
-fi
-
-if [ -n "${clst_DISTCC}" ]
-then   
-	export clst_myfeatures="${clst_myfeatures} distcc"
-	export DISTCC_HOSTS="${clst_distcc_hosts}"
-
-	USE="-gnome -gtk" emerge --oneshot --nodeps -b -k distcc || exit 1
-fi
-
-if [ -n "${clst_PKGCACHE}" ]
-then
-	clst_emergeopts="--usepkg --buildpkg"
-else
-	clst_emergeopts=""
-fi
-
-## setup the environment
+# setup our environment
 export FEATURES="${clst_myfeatures}"
 export CONFIG_PROTECT="-*"
-
-## START BUILD
-USE="build" emerge portage
-#turn off auto-use:
 export USE_ORDER="env:conf:defaults"	
 
+# START BUILD
 if [ "${clst_VERBOSE}" ]
 then
-	emerge ${clst_emergeopts} -vp ${clst_packages}
+	emerge ${clst_myemergeopts} -vp ${clst_packages}
 	sleep 15
 fi
 
-emerge ${clst_emergeopts} ${clst_packages}
+emerge ${clst_myemergeopts} ${clst_packages}
